generator client {
  provider      = "prisma-client-js"
  binaryTargets = ["native", "debian-openssl-3.0.x"]
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum AcademicStatus {
  REGULAR // منتظم
  CARRYING // محمّل
  REPEATING // معيد
}

enum SubjectResultStatus {
  PASSED // ناجح
  FAILED // راسب
  BLOCKED_BY_ABSENCE // محروم من الغياب
  IN_PROGRESS // مستمر
}

enum PromotionDecision {
  PROMOTED // ترقية
  PROMOTED_WITH_CARRY // ترقية مع تحميل
  REPEAT_YEAR // إعادة السنة
}

enum AdminRole {
  DEAN // عميد الكلية - صلاحيات على كل الأقسام
  DEPARTMENT_HEAD // رئيس قسم - صلاحيات على قسم واحد فقط
}

model Department {
  id         BigInt   @id @default(autoincrement())
  name       String   @unique
  created_at DateTime @default(now())
  updated_at DateTime @updatedAt

  students  Student[]
  teachers  Teacher[]
  materials Material[]
  admins    Admin[]

  // Promotion relation
  promotion_config PromotionConfig?
}

model Stage {
  id         BigInt   @id @default(autoincrement())
  name       String
  level      Int      @unique
  created_at DateTime @default(now())
  updated_at DateTime @updatedAt

  students  Student[]
  materials Material[]

  // Promotion relations
  promotions_from PromotionRecord[] @relation("StageFrom")
  promotions_to   PromotionRecord[] @relation("StageTo")
}

model Student {
  id                   BigInt  @id @default(autoincrement())
  student_id           String  @unique
  name                 String
  email                String  @unique
  password             String
  must_change_password Boolean @default(true)
  is_verified          Boolean @default(false)
  fingerprint_hash     String?

  // Email verification fields
  email_verification_token   String?   @unique
  email_verification_expires DateTime?
  password_reset_token       String?   @unique
  password_reset_expires     DateTime?
  email_verified_at          DateTime?

  // Promotion fields
  academic_status AcademicStatus @default(REGULAR)
  academic_year   String? // مثال: "2025-2026"

  created_at DateTime @default(now())
  updated_at DateTime @updatedAt

  department_id BigInt?
  department    Department? @relation(fields: [department_id], references: [id], onDelete: SetNull)

  stage_id BigInt?
  stage    Stage?  @relation(fields: [stage_id], references: [id], onDelete: SetNull)

  attendance_records AttendanceRecord[]
  qr_tokens          QRToken[]
  failed_attempts    FailedAttempt[]

  // Promotion relations
  enrollments       Enrollment[]
  promotion_records PromotionRecord[]
  carried_subjects  CarriedSubject[]
  absenceWarnings   AbsenceWarning[]

  @@index([department_id, stage_id])
  @@index([email])
  @@index([student_id])
  @@index([email_verification_token])
  @@index([password_reset_token])
}

model Teacher {
  id         BigInt   @id @default(autoincrement())
  name       String
  email      String   @unique
  password   String
  created_at DateTime @default(now())
  updated_at DateTime @updatedAt

  // Password Reset Fields
  password_reset_token   String?   @unique
  password_reset_expires DateTime?

  department_id BigInt?
  department    Department? @relation(fields: [department_id], references: [id], onDelete: SetNull)

  sessions          Session[]
  teacher_materials TeacherMaterial[]

  @@index([department_id])
  @@index([email])
}

model TeacherMaterial {
  id         BigInt   @id @default(autoincrement())
  created_at DateTime @default(now())

  teacher_id BigInt
  teacher    Teacher @relation(fields: [teacher_id], references: [id], onDelete: Cascade)

  material_id BigInt
  material    Material @relation(fields: [material_id], references: [id], onDelete: Cascade)

  @@unique([teacher_id, material_id])
  @@index([teacher_id])
  @@index([material_id])
}

model Admin {
  id         BigInt   @id @default(autoincrement())
  name       String
  email      String   @unique
  password   String
  created_at DateTime @default(now())
  updated_at DateTime @updatedAt

  // Password Reset Fields
  password_reset_token   String?   @unique
  password_reset_expires DateTime?

  // Access Control based on department_id:
  // NULL = Dean (Full Access to all departments)
  // NOT NULL = Department Head (Access restricted to specific department)
  department_id BigInt?
  department    Department? @relation(fields: [department_id], references: [id], onDelete: SetNull)

  @@index([email])
  @@index([department_id])
}

enum Semester {
  SEMESTER_1
  SEMESTER_2
  FULL_YEAR
}

model Material {
  id         BigInt   @id @default(autoincrement())
  name       String
  created_at DateTime @default(now())
  updated_at DateTime @updatedAt

  department_id BigInt
  department    Department @relation(fields: [department_id], references: [id], onDelete: Cascade)

  stage_id BigInt
  stage    Stage  @relation(fields: [stage_id], references: [id], onDelete: Cascade)

  // Promotion & Semester fields
  semester        Semester @default(FULL_YEAR)
  is_core_subject Boolean  @default(false) // مادة أساسية؟
  prerequisites   String? // IDs المواد المتطلبة (JSON)

  sessions         Session[]
  teacherMaterials TeacherMaterial[]

  // Promotion relations
  enrollments      Enrollment[]
  carried_subjects CarriedSubject[]
  absenceWarnings  AbsenceWarning[]

  @@unique([name, department_id, stage_id])
  @@index([department_id])
  @@index([stage_id])
}

model Geofence {
  id            BigInt   @id @default(autoincrement())
  name          String   @unique
  latitude      Float
  longitude     Float
  radius_meters Int      @default(100)
  created_at    DateTime @default(now())
  updated_at    DateTime @updatedAt

  sessions Session[]
}

model Session {
  id           BigInt   @id @default(autoincrement())
  session_date DateTime @default(now())
  qr_secret    String
  is_active    Boolean  @default(true)
  created_at   DateTime @default(now())
  expires_at   DateTime

  teacher_id BigInt
  teacher    Teacher @relation(fields: [teacher_id], references: [id], onDelete: Cascade)

  material_id BigInt
  material    Material @relation(fields: [material_id], references: [id], onDelete: Cascade)

  geofence_id BigInt
  geofence    Geofence @relation(fields: [geofence_id], references: [id], onDelete: Restrict)

  qr_tokens          QRToken[]
  attendance_records AttendanceRecord[]
  failed_attempts    FailedAttempt[]

  @@index([teacher_id])
  @@index([material_id])
  @@index([geofence_id])
  @@index([session_date])
  @@index([is_active])
}

model QRToken {
  id           BigInt    @id @default(autoincrement())
  token_hash   String    @unique
  generated_at DateTime  @default(now())
  expires_at   DateTime
  used_at      DateTime?

  session_id BigInt
  session    Session @relation(fields: [session_id], references: [id], onDelete: Cascade)

  used_by_student_id BigInt?
  used_by_student    Student? @relation(fields: [used_by_student_id], references: [id], onDelete: SetNull)

  @@index([session_id])
  @@index([used_by_student_id])
  @@index([expires_at])
}

enum AttendanceStatus {
  PRESENT
  ABSENT
  LATE
  EXCUSED
}

model AttendanceRecord {
  id         BigInt           @id @default(autoincrement())
  token_hash String?
  latitude   Float?
  longitude  Float?
  marked_by  String           @default("qr_scan")
  status     AttendanceStatus @default(PRESENT)
  marked_at  DateTime         @default(now())

  session_id BigInt
  session    Session @relation(fields: [session_id], references: [id], onDelete: Cascade)

  student_id BigInt
  student    Student @relation(fields: [student_id], references: [id], onDelete: Cascade)

  @@unique([student_id, session_id])
  @@index([session_id])
  @@index([student_id])
  @@index([marked_at])
  @@index([status])
}

model FailedAttempt {
  id               BigInt   @id @default(autoincrement())
  error_type       String
  error_message    String?
  ip_address       String?
  device_info      String?
  fingerprint_hash String?
  attempted_at     DateTime @default(now())

  session_id BigInt?
  session    Session? @relation(fields: [session_id], references: [id], onDelete: SetNull)

  student_id BigInt?
  student    Student? @relation(fields: [student_id], references: [id], onDelete: SetNull)

  @@index([session_id])
  @@index([student_id])
  @@index([attempted_at])
  @@index([error_type])
}

// ============================================
// Promotion System Models
// ============================================

model Enrollment {
  id            BigInt              @id @default(autoincrement())
  academic_year String // السنة الدراسية مثل "2025-2026"
  result_status SubjectResultStatus @default(IN_PROGRESS)
  is_carried    Boolean             @default(false) // هل المادة محمّلة من سنة سابقة
  created_at    DateTime            @default(now())
  updated_at    DateTime            @updatedAt

  student_id BigInt
  student    Student @relation(fields: [student_id], references: [id], onDelete: Cascade)

  material_id BigInt
  material    Material @relation(fields: [material_id], references: [id], onDelete: Cascade)

  @@unique([student_id, material_id, academic_year])
  @@index([student_id])
  @@index([material_id])
  @@index([academic_year])
  @@index([result_status])
}

model PromotionRecord {
  id                 BigInt            @id @default(autoincrement())
  academic_year_from String // السنة المنقول منها
  academic_year_to   String // السنة المنقول إليها
  decision           PromotionDecision
  failed_count       Int               @default(0) // عدد المواد الراسبة
  carried_count      Int               @default(0) // عدد المواد المحمّلة
  notes              String? // ملاحظات إضافية
  processed_at       DateTime          @default(now())
  processed_by       String? // اسم الأدمن الذي نفذ الترحيل

  student_id BigInt
  student    Student @relation(fields: [student_id], references: [id], onDelete: Cascade)

  stage_from_id BigInt?
  stage_from    Stage?  @relation("StageFrom", fields: [stage_from_id], references: [id], onDelete: SetNull)

  stage_to_id BigInt?
  stage_to    Stage?  @relation("StageTo", fields: [stage_to_id], references: [id], onDelete: SetNull)

  @@index([student_id])
  @@index([academic_year_from])
  @@index([academic_year_to])
  @@index([decision])
}

model CarriedSubject {
  id            BigInt   @id @default(autoincrement())
  academic_year String // السنة التي حُمّلت فيها المادة
  created_at    DateTime @default(now())

  student_id BigInt
  student    Student @relation(fields: [student_id], references: [id], onDelete: Cascade)

  material_id BigInt
  material    Material @relation(fields: [material_id], references: [id], onDelete: Cascade)

  @@unique([student_id, material_id, academic_year])
  @@index([student_id])
  @@index([material_id])
  @@index([academic_year])
}

model PromotionConfig {
  id                           BigInt   @id @default(autoincrement())
  max_carry_subjects           Int      @default(2) // أقصى عدد للمواد المحمّلة
  fail_threshold_for_repeat    Int      @default(3) // إذا رسب بـ 3 فأكثر يعيد
  disable_carry_for_final_year Boolean  @default(false) // السماح بالتحميل في السنة الأخيرة
  block_carry_for_core         Boolean  @default(false) // منع تحميل المواد الأساسية
  repeat_mode                  String   @default("repeat_failed_only") // أو "repeat_full_year"
  created_at                   DateTime @default(now())
  updated_at                   DateTime @updatedAt

  department_id BigInt     @unique
  department    Department @relation(fields: [department_id], references: [id], onDelete: Cascade)
}

// نظام إنذارات الغياب
enum WarningType {
  NOTICE // تنبيه 3%
  FIRST_WARNING // إنذار أولي 5%
  FINAL_WARNING // إنذار نهائي 7%
  ABSENCE_FAIL // رسوب بالغياب 10-15%
  EXPULSION_WARNING // تحذير فصل 7 أيام متتالية
}

model AbsenceWarning {
  id                 BigInt      @id @default(autoincrement())
  warning_type       WarningType
  absence_percentage Float // نسبة الغياب عند إرسال الإنذار
  consecutive_days   Int? // الأيام المتتالية للغياب (للفصل)
  email_sent         Boolean     @default(false) // هل تم إرسال البريد
  sent_at            DateTime    @default(now())

  student_id BigInt
  student    Student @relation(fields: [student_id], references: [id], onDelete: Cascade)

  material_id BigInt?
  material    Material? @relation(fields: [material_id], references: [id], onDelete: SetNull)

  @@index([student_id])
  @@index([material_id])
  @@index([warning_type])
}
